--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
-/* تنسيق الجدول */
-/* تنسيق الجدول */
+
 .tap{
   background-image: url("assets/bg2.jpg");
   background-size: cover;
@@ -16,6 +15,24 @@
   
  
 }
+
+
+@media (max-width: 768px) {
+  /* ضبط أزرار تحميل الملفات وإضافة طالب لتكون متكدسة */
+  .grid-cols-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  /* تحسين البحث لجعل الإدخال يأخذ عرضًا كاملًا */
+  .search-container {
+    width: 100%;
+    max-width: 90%;
+    margin: 0 auto;
+  }
+}
+
 /* tbody{
   background-color: rgba(255, 255, 255, 0.3);
 } */
